Use schema metrics types for query docs
